--- a/index.html
+++ b/index.html
@@ -111,27 +111,27 @@
 <option value="https://babybounce500.github.io/PRO1/RENDITE_RECHNER_updated.html">RENDITE</option>
 </select>
 </div>
-<a href="https://Babybounce500.github.io/PRO1/CONSULTUS2.html">
+<a href="https://Babybounce500.github.io/1b/CONSULTUS3.html">
   CONSULTUS
-  <a href="https://Babybounce500.github.io/PRO/DENARIUS1.html">
+  <a href="https://Babybounce500.github.io/1b/DENARIUS3.html">
     DENARIUS
    </a>
    CHARTUS
    <select onchange="window.location.href = this.value">
    <option value="#">-- Select an option --</option>
-   <option value="https://babybounce500.github.io/PRO/APICANDELA">API CANDELA</option>
-   <option value="https://babybounce500.github.io/PRO/APILIMES2">API LIMES</option>
+   <option value="https://babybounce500.github.io/1b/APICANDELA2">API CANDELA</option>
+   <option value="https://babybounce500.github.io/1b/APILIMES3">API LIMES</option>
    <option value="https://babybounce500.github.io/PRO/APICLOSE">API CLOSE</option>
    <option value="https://babybounce500.github.io/PRO1/REALTIMEPRO">API REALTIME</option>
    <option value="https://babybounce500.github.io/1a/LINIENCHART">LIMES</option>
    <option value="https://babybounce500.github.io/1a/chart2_restructured.html">CANDELA</option>
    </select>
-   <a href="https://Babybounce500.github.io/PRO1/INSTRUMENT3.html">
+   <a href="https://Babybounce500.github.io/1b/INSTRUMENT4.html">
     INSTRUMENTUM
-   </a><a href="https://Babybounce500.github.io/PRO/TECTUM.html">
+   </a><a href="https://Babybounce500.github.io/1b/TECTUM2.html">
     TECTUM
    </a>
-   <a href="https://Babybounce500.github.io/PRO/ARGENTUM3.html">
+   <a href="https://Babybounce500.github.io/1b/ARGENTUM4.html">
     ARGENTUM
    </a>
    <div class="dropdown_label">
