--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <html>
 <head>
 <script type="text/javascript">
-  var password = prompt("Please enter your password", "");
-  if(password != "yourPasswordHere") {
+  var password = prompt("alf", "");
+  if(password != "alf") {
     window.location.href = "http://www.google.com";
   }
 </script>
