--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <script type="text/javascript">
   var password = prompt("alf", "");
-  if(password != "alf") {
+  if(password != "yourPasswordHere") {
     window.location.href = "http://www.google.com";
   }
 </script>
