--- a/INSTRUMENTA.html
+++ b/INSTRUMENTA.html
@@ -30,7 +30,7 @@
 body {
     background-color: #251532; /* Hintergrundfarbe */
     color: white; /* Textfarbe */
-    font-family: Arial, sans-serif; /* Schriftart */
+    font-family: "Cascadia Code" ; /* Schriftart */
 }
 .container {
     max-width: 800px;
