--- a/APICLOSEA.html
+++ b/APICLOSEA.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="de">
 <head>
@@ -6,18 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>API Anfrage für Aktienkurse</title>
     
+
 <style>
-body {
+    /* Apply Cascadia Code font to body and headers */
+    body {
+        font-family: "Cascadia Code", monospace; /* Cascadia Code for body text */
+        font-size: 24px; /* Enlarged font size for body text */
+    }
+    h1, h2, h3, h4, h5, h6 {
+        font-family: "Cascadia Code", monospace; /* Cascadia Code for headers */
+    }
+    /* Adjust the size of input fields to match the enlarged font size */
+    input, select, textarea {
+        font-size: 24px;
+    }
+    body {
     background-color: #251532; /* Hintergrundfarbe */
     color: white; /* Textfarbe */
-    font-family: Arial, sans-serif; /* Schriftart */
+    font-family: "Cascadia Code"; /* Schriftart */
 }
 .container {
     max-width: 800px;
     margin: auto;
     padding: 20px;
 }
-</style></head>
+</style>
+</head>
 <body>
 <h1>API Anfrage für Aktienkurse</h1>
 <label for="stockSymbol">Aktienkürzel:</label>
