--- a/INSTRUMENTA.html
+++ b/INSTRUMENTA.html
@@ -20,24 +20,37 @@
   </script>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&amp;display=swap" rel="stylesheet"/>
   <!DOCTYPE html>
-<html lang="de">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>API Anfrage für Aktienkurse</title>
-    
-<style>
-body {
-    background-color: #251532; /* Hintergrundfarbe */
-    color: white; /* Textfarbe */
-    font-family: "Cascadia Code" ; /* Schriftart */
-}
-.container {
-    max-width: 800px;
-    margin: auto;
-    padding: 20px;
-}
-</style>
+  <html lang="de">
+  <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>API Anfrage für Aktienkurse</title>
+      
+  
+  <style>
+      /* Apply Cascadia Code font to body and headers */
+      body {
+          font-family: "Cascadia Code", monospace; /* Cascadia Code for body text */
+          font-size: 24px; /* Enlarged font size for body text */
+      }
+      h1, h2, h3, h4, h5, h6 {
+          font-family: "Cascadia Code", monospace; /* Cascadia Code for headers */
+      }
+      /* Adjust the size of input fields to match the enlarged font size */
+      input, select, textarea {
+          font-size: 24px;
+      }
+      body {
+      background-color: #251532; /* Hintergrundfarbe */
+      color: white; /* Textfarbe */
+      font-family: "Cascadia Code"; /* Schriftart */
+  }
+  .container {
+      max-width: 800px;
+      margin: auto;
+      padding: 20px;
+  }
+  </style>
  </head>
  <body>
   <h1>
