--- a/MASKE2.html
+++ b/MASKE2.html
@@ -61,5 +61,18 @@ function fetchResults() {
       console.error('Error fetching data:', error);
     });
 }
-</script><button onclick="fetchResults()">Ergebnisse abrufen</button></body>
+</script><button onclick="fetchResults()">Ergebnisse abrufen</button>
+<script>
+// JavaScript code to fetch data from Flask app and display it in MASKE2.html
+fetch('/fetchData')
+  .then(response => response.json())
+  .then(data => {
+    // Update your HTML elements with the received data
+    document.getElementById('dataContainer').innerText = data.data;
+  })
+  .catch(error => {
+    console.error('Error fetching data:', error);
+  });
+</script>
+</body>
 </html>
